public/a/c/_header.scss
/*-------------------------------------------

   	 Header
-------------------------------------------*/
header { 
	background: url(../i/bg-header-alt.png) repeat-x 0 bottom;
	overflow: hidden;
	position: relative;
	z-index: 10;
	.work-landing &, .work-detail & {
		margin-bottom: $base-xlarge;
		@media (max-width: 700px) { 
			& {
				margin-bottom: 20px;		
			}
		}
	}
	
	.inner-wrap { 
		padding-top: 38px;
		padding-bottom: 10px; 
		background: #fff; 
		margin-bottom: 19px;
	}

	@media (max-width: 768px) { 
		margin-bottom: 20px;
		display: none; position: fixed; width: 100%; z-index: 999;
	}
	

}

@media (max-width: 768px) {
	header .wrap{padding: 0;} 
	
}

.header-inner-wrapper { 
	&.top { top: 0 !important;}
	&.fixed {
		position: fixed;
		top: 0;
		width: 100%;
		z-index: 100;
	}
	.top.fixed {
		height: auto !important;
	}
}

@media (max-width: 400px) {
	.header-inner-wrapper.fixed, .header-inner-wrapper{
        position: relative; top: 0 !important;
    }	
}

@media (max-width: 400px) {
	.header-inner-wrapper.fixed, .header-inner-wrapper{
        position: relative; top: 0 !important;
    }
}

.search-wrap{margin-top:121px;}
.search-wrap.case-studies{margin-top: 0;}
.search-wrap.blog{margin-top: 0;}
.search-wrap.about{margin-top: 45px;}
.search-wrap.work, .search-wrap.detail {
    margin-top: 185px;
    .image-loading:last-child img {
        margin-bottom: 0;
    }
}

@media (max-width: 768px) {
	.search-wrap{margin-top:0px;}
	.search-wrap.case-studies{margin-top: 20px;}
	.search-wrap.blog{margin-top: 20px;}
	.search-wrap.about{margin-top: 75px;}
	.search-wrap.work, .search-wrap.detail{margin-top: 15px;}
}

@media (min-width: 768px) and (max-width: 979px) {  
.search-wrap{margin-top:155px;}
}

@media (max-width: 400px) {
.search-wrap{margin-top:-35px;}
}

#search-modal {display: none}


.hover-trigger {
	position: fixed;
	padding-left: 10px;
	width: 100%;
	display: none;
	background: rgba(59,59,59, .8);
	top: 0;
	z-index: 99; //1 under footer
	
	.mobile-logo { 
		margin: 0 0 0 10px;
		@extend %h6;
		display: none !important;
		width: 200px;
		text-align: left;
		float: left;
		color: #fff;
		padding-left: 30px;
	}
	.menu{
		float: left;
		@extend %h6;
		display: block;
		color: #fff;
		margin: 0 10px 0 0;
		background: url(../i/collapsed-nav-keystone.png) no-repeat 0 4px;
		padding-left: 30px;
	}
}

@media (max-width: 768px) {
	.hover-trigger{
		display: block;
		
		.mobile-logo { 
			margin: 0 0 0 10px;
			@extend %h6;
			display: block !important;
			width: 200px;
			text-align: left;
			float: left;
			color: #fff;
			background: url(../i/collapsed-nav-keystone.png) no-repeat 0 4px;
			padding-left: 30px;
		}
		.menu{float: right;
			@extend %h6;
			display: block;
			color: #fff;
			margin: 0 10px 0 0;
			background: none;
		}
		
	}
}

.logo { 
	float: left;
	max-width: 300px ;
	margin-bottom: 0;

	@media (max-width: 900px) { 
		margin: 0 auto;
		float: none;
		display: block;
	}

	span { 
		font: italic 16px/22px adobe-caslon-pro, serif;
		color: $black-light;
		display: inline-block;
		vertical-align: middle;
		text-transform: none;
	 }
}

nav { @include clearfix;
	ul { 
		@include clearfix;
		margin-right: 10px; 
		float: left;
		margin-bottom: 32px;
		@media (max-width: 900px) { 
			margin: 0 auto;
			float: none;
			width: 400px;
		}
	}
	&.main-nav { 
		float: right;
		margin-top: $base/2;
		margin-bottom: 0;
		@media (max-width: 900px) { 
			width: 500px;
			margin: 0 auto;
			float: none;
		}
		@media (max-width: 768px) { 
			width: 100%;
			margin: $base auto 0;
			ul {
				margin: 0 auto;
				float: none;
				width: 95%;
			}
			li { 
				float: none;
				margin-left: 0;
				
				a{
					font: 700 12.5px/26px proxima-nova, sans-serif;
					padding: 5px 10px;
					display: block;
					border-bottom: 2px solid $gray-light;
					margin-bottom: 0;
				}
			}
			li:last-child a{border-bottom: 0;}
		}
	}
	li {
		float: left;
		margin-bottom: 0;
	}
	&.main-nav a { @extend %h6; 
		#{$link-states} { color: $black; }
	}
	.ss-standard { 
		float: left;
		margin-bottom: 0 !important;
		margin-left: 10px;
		@media screen and (max-width: 700px) { 
			float: none;
			display: block;
		}
	}
}


.subnav { 
	margin-top: -$base*5;
	background: $gray-light;
	box-shadow: inset 1px 1px 1px 1px rgba($black, .1);
	.work-detail & { margin-bottom: 0; }
	@media (max-width: 768px){
		margin-top: 26px;
		overflow-x: scroll; 
		padding: 0 20px;
	}
	ul {

		max-width: 1024px;
		margin: 0 auto;
		float: none;		
		@media (max-width: $max-page-width + 20){
			padding: 0;
			width: 920px;
			margin: 0 auto;
		}

		@media (max-width: 1210px){
			width: 820px;
		}
		@media (max-width: 900px){
			width: 665px;
		}		
	}
	li { 
		padding: $base 0;
		margin-right: 80px;
		margin-bottom: 0;
		margin-left: 0;
		&:last-of-type { margin-right: 0; }
		&.on { 
			background: url(../i/carot-subnav-on.png) no-repeat center bottom;
			a { 
				color: #fff;
				text-shadow: 1px 2px 1px rgba($black, .2);
			}
		}
		@media (max-width: $max-page-width + 20){
			margin-right: 60px;
		}
		@media (max-width: 900px){
			margin-right: 30px;
		}				
	}
	&.cs li { margin-right: 102px; 
		&:last-of-type { margin-right: 0; }
	}
	a { 
		font: 22px/1.9 $serif;
		color: $black-light;
		text-transform: none;

		&:hover, &:focus { color: $black-medium; }
		@media (max-width: $max-page-width + 20){
			font-size: 18px;
		}		

	} 
}

div.expanded .subnav li.on { background: none; }

#ss_fixedDiv .inner-wrap { background: white; }
#ss_fixedDiv .inner-wrap .wrap { height: 61px; overflow: hidden; }
#ss_fixedDiv .first { margin-top: 60px; }

@media (max-width: 600px){
	.main-nav {
		.ss-icon {
			display: block;
			width: 10px;
			margin: 0 auto;
		}
	}
}

/*-------------------------------------------

   	 End Header
-------------------------------------------*/

